# core144-public

./: Cargo.toml  README.md
docs/: guide_historical_analysis.md  integration-guide.md  parental_control_guide.md  patent_analize_guide.md
examples/: minimal.rs
src/: lib.rs
src/api/: core.rs  mod.rs  profile.rs
src/core/: engine.rs  mod.rs  projection.rs
src/lexicon/: mod.rs  parser.rs
src/profile/: mod.rs  yaml.rs
synthetic-mind-core/: LICENSE-APACHE.md  LICENSE-GPL.md  LICENSE-MPL.md  NOTICE.md
synthetic-mind-core/core/: Cargo.toml
synthetic-mind-core/core/src/: lib.rs
synthetic-mind-core/core/src/internal_time/: integration.rs  mod.rs
synthetic-mind-core/core/src/memory/: mod.rs
synthetic-mind-core/core/src/multimodal_invariants/: mod.rs  vision.rs
synthetic-mind-core/core/src/ontic_groups/: coherence.rs  mod.rs
synthetic-mind-core/core/src/ontology/: lebesgue_space.rs  measures.rs  mod.rs
synthetic-mind-core/core/src/phase_stack/: attention.rs  finite_automata.rs  mod.rs
synthetic-mind-core/core/src/reflexive_core/: incompleteness.rs  mod.rs
synthetic-mind-core/core/src/utils/: mod.rs
synthetic-mind-core/docs/: architecture.md  internal-time.md  invariant-models.md  privacy-and-use.md
synthetic-mind-core/docs/core-concepts/: ontology.md
synthetic-mind-core/docs/product-guides/: synthetic-transponder.md
synthetic-mind-core/docs/validation-models/: coherence-validation.md
synthetic-mind-core/gpl-modules/context-accents/: Cargo.toml
synthetic-mind-core/gpl-modules/context-accents/src/: lib.rs
synthetic-mind-core/gpl-modules/invariant-extended/: Cargo.toml
synthetic-mind-core/gpl-modules/invariant-extended/src/: lib.rs
synthetic-mind-core/gpl-modules/meta-contexts/: Cargo.toml
synthetic-mind-core/gpl-modules/meta-contexts/src/: lib.rs
synthetic-mind-core/gpl-modules/social-rules-emergence/: Cargo.toml
synthetic-mind-core/gpl-modules/social-rules-emergence/src/: lib.rs
synthetic-mind-core/interfaces/: Cargo.toml
synthetic-mind-core/interfaces/src/: lib.rs
synthetic-mind-core/language-module/: Cargo.toml
synthetic-mind-core/language-module/src/: lib.rs  linguistic_invariants.rs  modality_marker.rs  phase_lexicon.rs  syntax_parser.rs
synthetic-mind-core/meta-ontology-module/: Cargo.toml
synthetic-mind-core/meta-ontology-module/src/: emotion_semantic_link.rs  gap_detector.rs  lib.rs  meta_tree_builder.rs  onto16.rs
synthetic-mind-core/products/shadow-subarchitecture/: Cargo.toml
synthetic-mind-core/products/shadow-subarchitecture/diagnostics/: mod.rs
synthetic-mind-core/products/shadow-subarchitecture/src/: lib.rs  main.rs
synthetic-mind-core/products/synthetic-transponder/: Cargo.toml
synthetic-mind-core/products/synthetic-transponder/diagnostics/: mod.rs
synthetic-mind-core/products/synthetic-transponder/src/: lib.rs  main.rs
synthetic-mind-core/products/technical-evangelist/: Cargo.toml
synthetic-mind-core/products/technical-evangelist/src/: lib.rs  main.rs
synthetic-mind-core/runtime/: Cargo.toml
synthetic-mind-core/runtime/src/: lib.rs
synthetic-mind-core/runtime/src/ipc/: client.rs  mod.rs  server.rs
synthetic-mind-core/runtime/src/plugin/: loader.rs  mod.rs
synthetic-mind-core/scripts/: build-desktop.ps1  build-gpl-clis.ps1  build-gpl-clis.sh  build-no-std.ps1  build_desktop.sh  build_no_std.sh  ci-build.sh  install-gpl-clis.sh  readme.md  run-diagnostic.sh
tests/: integration.rs
