```toml
[package]
name = "language-module"
version = "0.1.0"
edition = "2021"
license = "MPL-2.0"

[dependencies]
synthetic-mind-core = { path = "../core" }  # Apache → совместимо с MPL
serde = { version = "1.0", features = ["derive"], optional = true }

[features]
default = []
serde = ["dep:serde"]
```