```toml
[package]
name = "synthetic-mind-runtime"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
description = "IPC runtime for GPL module isolation"

[dependencies]
synthetic-mind-interfaces = { path = "../interfaces" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[features]
default = []
```