```toml
[package]
name = "synthetic-transponder"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"

[dependencies]
synthetic-mind-core = { path = "../../core" }
language-module = { path = "../../language-module" }
meta-ontology-module = { path = "../../meta-ontology-module" }
heapless = { version = "0.8", optional = true }

[features]
default = []
diagnostics = ["dep:heapless"]
```